# douevenliftbro

./: .gitignore  Cargo.toml  exercises.csv  release  run  sw.js
frontend/: app.js  app.wasm  sw.js
pub/: app.js  app.wasm  sw.js
src/: main.rs
static/: app.js  app.wasm  sw.js  tailwind.css
